<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darkBackground"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/text_view_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_32"
                android:text="@string/login_toolbar_title"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_large_body"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/image_view_user"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image_view_user"
                android:layout_width="@dimen/width_150"
                android:layout_height="@dimen/height_150"
                android:layout_marginTop="@dimen/margin_32"
                android:src="@drawable/user_big"
                app:layout_constraintBottom_toTopOf="@+id/text_view_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_title"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/text_view_email"
                style="@style/Authentication.EditTextTitle"
                android:layout_marginTop="@dimen/margin_32"
                android:text="@string/login_email"
                app:layout_constraintBottom_toTopOf="@+id/edit_text_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_view_user" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_text_email"
                style="@style/Authentication.EditText"
                android:hint="@string/login_email"
                android:inputType="textEmailAddress"
                app:backgroundTint="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/text_view_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_email" />

            <TextView
                android:id="@+id/text_view_password"
                style="@style/Authentication.EditTextTitle"
                android:text="@string/login_password"
                app:layout_constraintBottom_toTopOf="@+id/edit_text_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_email" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_text_password"
                style="@style/Authentication.EditText"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                app:backgroundTint="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/text_view_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_password" />

            <TextView
                android:id="@+id/text_view_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_32"
                android:layout_marginTop="@dimen/margin_32"
                android:layout_marginEnd="@dimen/margin_32"
                android:background="@drawable/background_button"
                android:gravity="center"
                android:padding="@dimen/padding_12"
                android:text="@string/login_login"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_large_body"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/text_view_forgot_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_password" />

            <ImageView
                android:id="@+id/image_view_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_16"
                android:src="@drawable/enter_white"
                app:layout_constraintBottom_toBottomOf="@+id/text_view_login"
                app:layout_constraintEnd_toEndOf="@+id/text_view_login"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/text_view_login"
                app:layout_constraintTop_toTopOf="@+id/text_view_login"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/text_view_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_32"
                android:layout_marginTop="@dimen/margin_32"
                android:layout_marginEnd="@dimen/margin_32"
                android:text="@string/login_forgot_password"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_body"
                app:layout_constraintBottom_toTopOf="@+id/text_view_have_an_account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_login" />

            <TextView
                android:id="@+id/text_view_have_an_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_32"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_32"
                android:text="@string/login_dont_have_account_yet"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_large_body"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/view_underline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_forgot_password" />

            <View
                android:id="@+id/view_underline"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin_4"
                android:layout_marginBottom="@dimen/margin_32"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/text_view_have_an_account"
                app:layout_constraintStart_toStartOf="@+id/text_view_have_an_account"
                app:layout_constraintTop_toBottomOf="@+id/text_view_have_an_account" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>