<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout_fragment_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/coordinator_layout_bottom_app_bar_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/coordinator_layout_bottom_app_bar_container"
            android:layout_width="0dp"
            android:layout_height="96dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraint_layout_fragment_container">

            <com.google.android.material.bottomappbar.BottomAppBar
                android:id="@+id/bottom_app_bar"
                style="@style/Widget.MaterialComponents.BottomAppBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                app:backgroundTint="@color/darkBackground"
                app:fabCradleRoundedCornerRadius="20dp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_book_appointment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/calender_big_blue"
                app:backgroundTint="@color/white"
                app:elevation="@dimen/elevation_2"
                app:fabCustomSize="70dp"
                app:layout_anchor="@+id/bottom_app_bar"
                app:maxImageSize="38dp"
                app:pressedTranslationZ="@dimen/elevation_6" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <TextView
            android:id="@+id/text_view_home"
            style="@style/Dashboard.BottomBarItem"
            android:drawableTop="@drawable/home_white"
            android:drawablePadding="@dimen/padding_8"
            android:text="@string/dashboard_home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/text_view_book_appointment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/coordinator_layout_bottom_app_bar_container"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/text_view_book_appointment"
            style="@style/Dashboard.BottomBarItem"
            android:text="@string/dashboard_book_an_appointment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/text_view_my_appointments"
            app:layout_constraintStart_toEndOf="@+id/text_view_home"
            app:layout_constraintTop_toTopOf="@+id/coordinator_layout_bottom_app_bar_container"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/text_view_my_appointments"
            style="@style/Dashboard.BottomBarItem"
            android:drawableTop="@drawable/clock_white"
            android:drawablePadding="@dimen/padding_8"
            android:text="@string/dashboard_my_appointments"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_view_book_appointment"
            app:layout_constraintTop_toTopOf="@+id/coordinator_layout_bottom_app_bar_container"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>